2012-08-02  Earnie Boyd  <earnie@users.sourceforge.net>

	Add string to 64-bit integer conversion function prototypes.

	* include/stdlib.h (_strtoi64, _strtoi64_l, _strtoui64, _strtoui64_l)
	(_wcstoi64, _wcstoi64_l, _wcstoui64, _wcstoui64_l): Declare them.
	* include/wchar.h (_wcstoi64, _wcstoi64_l, _wcstoui64, _wcstoui64_l):
	Likewise; these are duplicates of the <stdlib.h> declarations.

2012-08-01  Earnie Boyd  <earnie@users.sourceforge.net>

	Update for _WIN64 exception handler readiness.

	* include/excpt.h [_WIN64] (__try1, __except1): Add alternative inline
	assembly code implementation, based on X86-64 architecture.

2012-07-30  Earnie Boyd  <earnie@users.sourceforge.net>

	Correct missing inclusion of <_mingw.h>.

	* include/stdint.h: Add omitted #include; all mingwrt headers are
	expected to include this; it is required to define __int64.

2011-11-30  Ozkan Sezer  <sezero@users.sourceforge.net>

	Correct prototypes for _wfindfirst()/_wfindnext() function family.

	* include/io.h (_wfindfirst, _wfindfirst32, _wfindfirsti64)
	(_wfindfirst32i64, _wfindfirst64i32): Return type changed to intptr_t.
	(_wfindnext, _wfindnext32, _wfindnexti64, _wfindnext32i64)
	(_wfindnext64i32, _wfindnext64): Type of parameter #1 must match.

2011-11-30  Earnie Boyd  <earnie@users.sourceforge.net>

	Avoid potential GCC "missing function prototype" warnings.

	* include/stdio.h (getc, putc, getchar, putchar, fopen64)
	(ftello64): Provide a function prototype declaration for each of
	these, prior to the corresponding inline implementation.

2011-08-23 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* include/_mingw.h: Increment version to 3.20.

2011-08-23 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* tlsmthread.c: Update to reflect changes in tlssup.c.
	* tlssup.c: code clean-up.

2011-08-20 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* include/_mingw.h: Increment version to 3.19.

2011-08-19  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
